# birrds

./: .gitignore  README.md  birds.py  birds2.py  pyproject.toml
src/birrds/: __init__.py  __main__.py  birds.py  signs.py
