[project]
authors = [{name = "Steve Marin", email = "steve.marin@phoenix-opsgroup.com"}]
dependencies = []
description = "Add a short description here"
name = "birrds"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
birrds = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
pip = ">=24.3.1,<25"
ipython = ">=8.30.0,<9"

[tool.ruff]
line-length = 119
